kubernetes/security/peer-authentication-with-mutual-TLS.yaml
#Globally enabling Istio mutual TLS in STRICT mode

apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "default"
  namespace: "istio-system"
spec:
  mtls:
    mode: STRICT
