kubernetes/security/authorization-policy-allow-nothing.yaml
# RBAC: access denied
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: default
spec:
  {}
